# CodroidCRI

./: CMakeLists.txt
examples/: cri_cartesian_lift_demo.cpp  cri_joint_demo.cpp
include/robot/: CriRealtimeParser.h  DataPushConfigStore.h  RealtimePointSender.h  RobotTcpClient.h  RobotUdpClient.h
include/robot/model/: CriTypes.h
src/robot/: CriRealtimeParser.cpp  DataPushConfigStore.cpp  RealtimePointSender.cpp  RobotTcpClient.cpp  RobotUdpClient.cpp
